update rubocop to use core

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,5 @@
-inherit_from: ~/.rubocop.yml
+inherit_from:
+  - https://raw.githubusercontent.com/jubishop/core/master/.rubocop.yml
 
 Style/DateTime:
   Enabled: false
