--- a/documentation/commands.yaml
+++ b/documentation/commands.yaml
@@ -12,7 +12,7 @@ ranks:
   description: Print user's ranks
   usage: "[user]"
 series:
-  description: Display average stats over the last 36 hours for games with given players
+  description: Display average stats over the last 36 hours for games with given players.
   usage: "[user] [user2] [user3] ..."
   arg_notes:
   - Uses replays you've uploaded to ballchasing.com.
@@ -20,14 +20,16 @@ series:
   - If no `user` is provided, it will display only your stats.
   - Will show stats for up to 6 `user`s.
 alltime:
-  description: Display average stats for all known games with given players
+  description: Display average stats for all known games with given players.
   usage: "[user] [user2] [user3] ..."
   arg_notes:
   - Uses all replays ever fetched with the `!series` command.
   - If no `user` is provided, it will display only your stats.
   - Will show stats for up to 6 `user`s.
+support:
+  description: Print link to discord channel to get help.
 invite:
-  description: Print link to invite others to install Tusk
+  description: Print link to invite others to install Tusk.
 twitch:
   description: Print link to Rocket League's official twitch profile.
 ballchasing:
